# ark-swiftness

./: Cargo.toml  Makefile  README.md
air/: Cargo.toml
air/src/: diluted.rs  domains.rs  lib.rs  periodic_columns.rs  public_memory.rs  types.rs
air/src/fixtures/: commitment.rs  config.rs  decommitment.rs  interaction_elements.rs  public_input.rs  unsent_commitment.rs  witness.rs
air/src/layout/: mod.rs
air/src/layout/dex/: autogenerated.rs  global_values.rs  mod.rs
air/src/layout/recursive/: autogenerated.rs  global_values.rs  mod.rs
air/src/layout/recursive_with_poseidon/: autogenerated.rs  global_values.rs  mod.rs
air/src/layout/small/: autogenerated.rs  mod.rs
air/src/layout/starknet/: autogenerated.rs  global_values.rs  mod.rs
air/src/layout/starknet_with_keccak/: autogenerated.rs  const_relations.rs  global_values.rs  mod.rs
air/src/tests/: public_input.rs
air/src/trace/: config.rs  decommit.rs  mod.rs
cli/: Cargo.toml
cli/src/: main.rs
commitment/: Cargo.toml  README.md
commitment/src/: lib.rs
commitment/src/table/: commit.rs  config.rs  decommit.rs  types.rs
commitment/src/table/tests/: table_commitment_commit.rs
commitment/src/vector/: commit.rs  config.rs  decommit.rs  types.rs
commitment/src/vector/tests/: vector_commitment_commit.rs  vector_commitment_decommit.rs
field/: Cargo.toml
field/src/: lib.rs  simple.rs
fri/: Cargo.toml
fri/src/: config.rs  first_layer.rs  formula.rs  fri.rs  group.rs  last_layer.rs  layer.rs  lib.rs  types.rs
fri/src/fixtures/: commitment.rs  config.rs  last_layer_coefficients.rs  queries.rs  unsent_commitment.rs  witness.rs
fri/src/tests/: commit.rs  config.rs  decommit.rs  formula.rs  last_layer.rs  next_layer.rs  verify.rs
hash/: Cargo.toml
hash/src/: lib.rs
hash/src/blake2s/: mod.rs
hash/src/keccak/: constants.rs  mod.rs  periodic.rs  utils.rs
hash/src/pedersen/: constants.rs  mod.rs  periodic.rs  utils.rs
hash/src/poseidon/: mod.rs  params.rs  periodic.rs
merke_tree/: Cargo.toml
pow/: Cargo.toml  README.md
pow/src/: config.rs  lib.rs  pow.rs
pow/src/tests/: mod.rs
proof_parser/: Cargo.toml
proof_parser/src/: conversion.rs  json_parser.rs  lib.rs  stark_proof.rs
proof_parser/src/annotations/: extract.rs  mod.rs
stark/: Cargo.toml
stark/src/: commit.rs  config.rs  lib.rs  oods.rs  queries.rs  stark.rs  types.rs  verify.rs
stark/src/fixtures/: commitment.rs  config.rs  constraint_coefficients.rs  domains.rs  oods_values.rs  unsent_commitment.rs  witness.rs
stark/src/tests/: commit.rs  proof.rs  verify.rs
transcript/: Cargo.toml
transcript/src/: lib.rs  transcript.rs
transcript/src/tests/: random_felt_to_prover.rs  random_felts_to_prover.rs  read_felt_from_prover.rs  read_felt_vector_from_prover.rs  read_uint64_from_prover.rs
utils/: Cargo.toml
utils/src/: lib.rs  mem_tools.rs
