[workspace.package]
description = "Ark Swiftness - Arkworks CairoVM Verifier implementation"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/GopherJ/ark-swiftness"
version = "0.0.1"

[workspace]
resolver = "2"
members = [
    "air",
    "transcript",
    "commitment",
    "fri",
    "pow",
    "stark",
    "field",
    "utils",
    "hash",
    "merke_tree"
]

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114",  default-features = false, features = ["arbitrary_precision", "alloc"] }
serde_with = { version = "3.8.3",  default-features = false, features = ["macros", "hex"] }
serde_repr = "0.1.19"
bincode = "1.3.3"
strum = { version = "0.26.2", features = ["derive"] }

sha3 = { version = "0.10.8",  default-features = false }
blake2 = { version = "0.10.6",  default-features = false }
blake3 = { version = "1.5", default-features = false }
tiny-keccak = { version = "2.0", features = ["sha3", "keccak"] }

ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
ark-std = { version = "0.4", default-features = false }
ark-bls12-381  = { version = "0.4", default-features =  false, features = ["scalar_field","curve"] }
ark-groth16 = { version = "0.4", default-features = false }
ark-snark = { version =  "0.4"  }
ark-r1cs-std = { version = "0.4", default-features = false }
ark-poly = { version = "0.4", default-features = false }
ark-relations = { version = "0.4" }
ark-crypto-primitives = { version = "0.4", default-features = false, features = ["r1cs","sponge","snark","merkle_tree"]  }

num = { version = "0.4.0", default-features = false }
num-bigint = { version = "0.4.4", default-features = false }
num-traits = { version = "0.2.18", default-features = false }
ruint = { version = "1.12", default-features = false, features = ["serde", "num-bigint"] }

clap = { version = "4.4.6", features = ["derive", "env"] }
once_cell = "1.19.0"

rayon = { version = "1.10" }

tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }

thiserror = "1"
thiserror-no-std = "2"

starknet-core = { version = "0.11.1", default-features = false }
starknet-crypto = { version = "0.7.1", default-features = false }
starknet-types-core = { version = "0.1.5", default-features = false }

swiftness_air = { package = "ark_swiftness_air", path = "./air" }
swiftness_commitment = { package = "ark_swiftness_commitment", path = "./commitment" }
swiftness_fri = { package = "ark_swiftness_fri", path = "./fri" }
swiftness_pow = { package = "ark_swiftness_pow", path = "./pow" }
swiftness_transcript = { package = "ark_swiftness_transcript", path = "./transcript" }
swiftness_field = { package = "ark_swiftness_field", path = "./field" }
swiftness_utils = { package = "ark_swiftness_utils", path = "./utils" }
swiftness_hash = { package = "ark_swiftness_hash", path = "./hash" }
swiftness_merkle_tree = { package = "ark_swiftness_merkle_tree", path = "./merke_tree" }

static_assertions = "1.1"

[profile.release]
overflow-checks = true

[profile.dev]
opt-level = 3
lto = true
overflow-checks = true
