[workspace.package]
description = "Ark Swiftness - Arkworks CairoVM Verifier implementation"
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/GopherJ/ark-swiftness"
version = "0.0.1"

[workspace]
resolver = "2"
members = [
    "air",
    "transcript",
    "commitment",
    "fri",
    "pow",
    "stark",
    "field",
    "utils",
    "hash",
    "proof_parser",
    "cli"
]

[workspace.dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.114",  default-features = false, features = ["arbitrary_precision", "alloc"] }
serde_with = { version = "3.8.3",  default-features = false, features = ["macros", "hex"] }
serde_repr = "0.1.19"
bincode = "1.3.3"
strum = { version = "0.26.2", features = ["derive"] }

sha3 = { version = "0.10.8",  default-features = false }
blake2 = { version = "0.10.6",  default-features = false }
blake3 = { version = "1.5", default-features = false }
tiny-keccak = { version = "2.0", features = ["sha3", "keccak"] }

ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
ark-std = { version = "0.4", default-features = false }
ark-bls12-381  = { version = "0.4", default-features =  false, features = ["scalar_field","curve"] }
ark-bn254 = { version = "0.4", default-features =  false, features = ["scalar_field","curve"] }
ark-groth16 = { version = "0.4", default-features = false }
ark-snark = { version =  "0.4"  }
ark-r1cs-std = { version = "0.4", default-features = false }
ark-poly = { version = "0.4", default-features = false }
ark-relations = { version = "0.4" }
ark-crypto-primitives = { version = "0.4", default-features = false, features = ["r1cs","sponge","snark","merkle_tree","prf"]  }

num = { version = "0.4.0", default-features = false }
num-bigint = { version = "0.4.4", default-features = false, features = ["serde"] }
num-integer = { version = "0.1", default-features = false }
num-traits = { version = "0.2.19", default-features = false }
ruint = { version = "1.12", default-features = false, features = ["serde", "num-bigint"] }

clap = { version = "4.4.6", features = ["derive", "env"] }

rayon = { version = "1.10" }

tracing = { version = "0.1", default-features = false, features = ["attributes"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }

thiserror = "1"
thiserror-no-std = "2"
anyhow = "1"

regex = "1.10"
once_cell = "1.19.0"

starknet-core = { version = "0.11.1", default-features = false }
starknet-crypto = { version = "0.7.1", default-features = false }
starknet-types-core = { version = "0.1.5", default-features = false }

swiftness_air = { package = "ark_swiftness_air", path = "./air" }
swiftness_commitment = { package = "ark_swiftness_commitment", path = "./commitment" }
swiftness_fri = { package = "ark_swiftness_fri", path = "./fri" }
swiftness_pow = { package = "ark_swiftness_pow", path = "./pow" }
swiftness_transcript = { package = "ark_swiftness_transcript", path = "./transcript" }
swiftness_stark = { package = "ark_swiftness_stark", path = "./stark" }
swiftness_field = { package = "ark_swiftness_field", path = "./field" }
swiftness_utils = { package = "ark_swiftness_utils", path = "./utils" }
swiftness_hash = { package = "ark_swiftness_hash", path = "./hash" }
swiftness_merkle_tree = { package = "ark_swiftness_merkle_tree", path = "./merke_tree" }
swiftness_proof_parser = { package = "ark_swiftness_proof_parser", path = "./proof_parser" }

static_assertions = "1.1"
cfg-if = "1"
log = "0.4"
env_logger = { version = "0.11.5"}
chrono = "0.4"
jemallocator = "0.5"
hex = "0.4.3"
lazy_static = "1.5.0"
[profile.release]
overflow-checks = true

[profile.dev]
lto = true
overflow-checks = true

# [patch.crates-io]
# ark-test-curves = { path = "../ark-algebra/test-curves" }
# ark-r1cs-std = { path = "../ark-r1cs-std" }
# ark-ff = { path = "../ark-algebra/ff" }
# ark-ec = { path = "../ark-algebra/ec" }
# ark-serialize = { path = "../ark-algebra/serialize" }
# ark-std = { path = "../ark-std" }
# ark-bls12-381  = { path = "../ark-algebra/curves/bls12_381" }
# ark-bn254 = { path = "../ark-algebra/curves/bn254" }
# ark-bls12-377 = {  path = "../ark-algebra/curves/bls12_377" }
# ark-mnt4-298 = { path = "../ark-algebra/curves/mnt4_298" }
# ark-mnt4-753 = { path = "../ark-algebra/curves/mnt4_753" }
# ark-mnt6-298 = {  path = "../ark-algebra/curves/mnt6_298" }
# ark-mnt6-753 = { path = "../ark-algebra/curves/mnt6_753" }
# ark-pallas = { path = "../ark-algebra/curves/pallas" }
# ark-groth16 = { path = "../ark-groth16" }
# ark-snark = { path = "../ark-snark/snark" }
# ark-poly = { path = "../ark-algebra/poly" }
# ark-relations = {  path = "../ark-snark/relations" }
# ark-crypto-primitives = { path = "../ark-crypto-primitives/crypto-primitives" }
