[package]
name = "ark_swiftness_air"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[features]
default = ["std", "recursive", "keccak"]
std = [
    "dep:thiserror",
    "swiftness_commitment/std",
    "swiftness_transcript/std",
    "starknet-core/std",
    "starknet-crypto/std",
]
dex = []
recursive = []
recursive_with_poseidon = []
small = []
starknet = []
starknet_with_keccak = []
keccak = [
    "swiftness_commitment/keccak",
]
blake2s = [
    "swiftness_commitment/blake2s",
]

[dependencies]
serde_with.workspace = true
serde.workspace = true
starknet-core.workspace = true
starknet-crypto.workspace = true
thiserror = { optional = true, workspace = true }
thiserror-no-std.workspace = true
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-r1cs-std = { workspace = true }

swiftness_commitment.workspace = true
swiftness_transcript.workspace = true
swiftness_field = { workspace = true }
swiftness_utils = { workspace = true }
swiftness_hash = { workspace = true }
