[package]
name = "ark_swiftness_hash"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
ark-ff = { workspace = true }
ark-std = { workspace = true }
ark-relations = { workspace = true }
ark-ec = { workspace = true }
static_assertions = { workspace = true }
ark-crypto-primitives = { workspace = true }
swiftness_utils = { workspace = true }
swiftness_field = { workspace = true }
num-bigint = { workspace = true }
ruint = { workspace = true }
starknet-crypto = { workspace = true }
starknet-core = { workspace = true }
ark-r1cs-std = { workspace = true }
num-traits = { workspace = true }
once_cell = { workspace = true }
ark-bls12-381 = { workspace = true }
blake2 = { workspace = true }
sha3 = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
[dev-dependencies]
ark-poly = { workspace = true }
ark-relations = { workspace = true }
