[package]
name = "ark_swiftness_merkle_tree"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
ark-ff = { workspace = true }
ark-std = { workspace = true }
static_assertions = { workspace = true }
ark-crypto-primitives = { workspace = true }
