[package]
name = "ark_swiftness_transcript"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
starknet-crypto.workspace = true
swiftness_field = { workspace = true }
swiftness_hash = { workspace = true }
swiftness_utils = { workspace = true }
ark-r1cs-std = { workspace = true }
ark-ff = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-relations = { workspace = true }

[features]
default = ["std"]
std = [
    "starknet-crypto/std",
]
