[package]
name = "ark_swiftness_utils"
description.workspace = true
edition.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

[dependencies]
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-ec = { workspace = true }
swiftness_field = { workspace = true }
ark-serialize = { workspace = true }
num-bigint = { workspace = true }
serde = { workspace = true }
ruint = { workspace = true }
bincode = { workspace = true }
serde_json = { workspace = true }
num-traits = { workspace = true }
ark-r1cs-std = { workspace = true }
